* vm.c (rb_vm_inc_const_missing_count, ruby_vm_const_missing_count):   added. * vm_insnhelper.h: ditto. * variable.c (rb_const_get_0), insns.def: Constants should not be   cached if const_missing is called.  [ruby-core:21059] [Bug #967] * bootstraptest/test_class.rb: add a test.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@21536 b2dd03c8-39d4-4d8f-98ff-823fe69b080e